--- a/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_One_BusinessesAndEvents.scss
@@ -84,6 +84,30 @@
 							&:before{
 								content: '\e816';
 							}
+							.street-block{
+								.thoroughfare, .premise{
+									display:inline-block;
+									margin-right:5px;
+									&:after{
+										content: ',';
+									}
+									&:last-child:after{
+										display:none;
+									}
+								}
+							}
+							.locality-block{
+								.locality, .state, .postal-code{
+									display:inline-block;
+									margin-right:5px;
+									&:after{
+										content: ',';
+									}
+									&:last-child:after{
+										display:none;
+									}
+								}
+							}
 						}
 					}
 					.titb_Right{
@@ -294,7 +318,7 @@ body.node-type-business-service-or-attraction{
 	 }
  }
 /*
- * Icon Colorings 
+ * Icon Colorings & Other
  */
  .js body.node-type-event .l-content, .js .node-type-business-service-or-attraction .l-content,
  .no-js body.node-type-event .l-content, .no-js .node-type-business-service-or-attraction .l-content{
@@ -317,6 +341,23 @@ body.node-type-business-service-or-attraction{
 		}
 		 .block__title{
 			 background-color: $color1;
+		 }
+		 .views-field-field-video{
+			 .player{
+				 position: relative;
+				 padding-bottom: 56.25%; /* 16:9 */
+				 padding-top: 25px;
+				 height: 0;
+				 iframe{
+					 position: absolute;
+					 top: 0;
+					 left: 0;
+					 right:0;
+					 width: 90%;
+					 margin: 0 auto;
+					 height: 100%;
+				 }
+			 }
 		 }
 	 }
 	 .fg_prices-container,
