--- a/sites/all/themes/wttoc/sass/components/Views_Social_Icons.scss
+++ b/sites/all/themes/wttoc/sass/components/Views_Social_Icons.scss
@@ -97,6 +97,16 @@
 .social-links-block-wttoc .service-stumbleupon .icon {
   background-color: #f74425;
 }
+.social-links-block-wttoc .service-instagram .icon {
+  background-color: #f7cf4c;
+}
+.social-links-block-wttoc .service-rss .icon {
+  background-color: #ff6600;
+}
+.social-links-block-wttoc .service-rss2 .icon {
+  background-color: #ffb04c;
+}
+
 .l-footer{
   .social-links-block-wttoc-container{
     text-align:center;
