--- a/sites/all/themes/wttoc/sass/components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/General_Elements.scss
@@ -225,8 +225,9 @@ footer.l-footer{
 /*
  * EU Cookie Compliance
  */
-#sliding-popup{
+#sliding-popup.sliding-popup-top{
 	@include clearfix;
+	position:fixed;
 }
 
 /*
