theme update base and reset

--- a/sites/all/themes/wttoc/css/wttoc.reset.css
+++ b/sites/all/themes/wttoc/css/wttoc.reset.css
@@ -82,7 +82,13 @@ a {
 /*
  * Bold Text
  */
-b {
+b, strong {
   font-weight: bold; }
+
+/*
+ * Cursive
+ */
+em {
+  font-style: italic; }
 
 /*# sourceMappingURL=wttoc.reset.css.map */
