--- a/sites/all/themes/wttoc/sass/base/base.scss
+++ b/sites/all/themes/wttoc/sass/base/base.scss
@@ -39,9 +39,14 @@ body.admin-menu{
 	#admin-menu{
 	    min-width: 50px;
 	    height: 80px;
-	}
-	.admin-menu-icon{
-		max-width:15px;
+		.dropdown#admin-menu-icon .admin-menu-icon > a{
+			padding:0;
+			img{
+				width:18px;
+				height:auto;
+				padding: 0 5px;
+			}
+		}
 	}
 	.l-page{
 		margin-top:80px;
