theme patches and updates

--- a/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
@@ -152,6 +152,16 @@ footer.l-footer{
 						font-size: 14px;
 						font-weight:bold;
 					}
+					&.tmenu-Dashboard{
+						color: $color1;
+						color: transparent;
+						letter-spacing: -0.5em;
+						padding-left:10px;
+						padding-right:13px;
+					}
+					&.tmenu-Dashboard:before{
+						content:'\e826';
+					}
 					&.tmenu-Search{
 						color: $color1;
 						color: transparent;
