--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -22,6 +22,7 @@
 @import "components/views/Views_All_BlogsAndNews";
 @import "components/views/Views_Social_Icons";
 @import "components/commerce/Cart";
+@import "components/editor/Editor_Dashboard";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
