--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -15,6 +15,7 @@
 @import "components/views/Views_One_BlogNews";
 @import "components/views/Views_All_BusinessesAndEvents";
 @import "components/views/Views_One_BusinessesAndEvents";
+@import "components/views/Views_One_BasicPage";
 @import "components/views/Views_Categories_Businesses_Events";
 @import "components/views/Views_small_blocks_Blogs_news";
 @import "components/views/Views_Unslider";
@@ -23,6 +24,8 @@
 @import "components/views/Views_Social_Icons";
 @import "components/commerce/Cart";
 @import "components/editor/Editor_Dashboard";
+@import "components/forms/Forms_contact-site-form";
+@import "components/store/Store_subscription";
 
 // Import variables, abstractions, base styles and components.
 // Uncomment the next lines and adjust them to your needs.
