fontello library update

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -62,3 +62,4 @@
 .icon-videocam:before { content: '\e83c'; } /* '' */
 .icon-rss:before { content: '\e83d'; } /* '' */
 .icon-rss-squared:before { content: '\e83e'; } /* '' */
+.icon-arrows-cw:before { content: '\e83f'; } /* '' */
