--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?96984380');
-  src: url('../font/fontello.eot?96984380#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?96984380') format('woff'),
-       url('../font/fontello.ttf?96984380') format('truetype'),
-       url('../font/fontello.svg?96984380#fontello') format('svg');
+  src: url('../font/fontello.eot?67369168');
+  src: url('../font/fontello.eot?67369168#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?67369168') format('woff'),
+       url('../font/fontello.ttf?67369168') format('truetype'),
+       url('../font/fontello.svg?67369168#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?96984380#fontello') format('svg');
+    src: url('../font/fontello.svg?67369168#fontello') format('svg');
   }
 }
 */
@@ -117,3 +117,4 @@
 .icon-videocam:before { content: '\e83c'; } /* '' */
 .icon-rss:before { content: '\e83d'; } /* '' */
 .icon-rss-squared:before { content: '\e83e'; } /* '' */
+.icon-arrows-cw:before { content: '\e83f'; } /* '' */
