update fontello library

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -63,3 +63,4 @@
 .icon-rss:before { content: '\e83d'; } /* '' */
 .icon-rss-squared:before { content: '\e83e'; } /* '' */
 .icon-arrows-cw:before { content: '\e83f'; } /* '' */
+.icon-download:before { content: '\e840'; } /* '' */
