theme tabblock.js and editor dashboard css

--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -5303,6 +5303,12 @@ body.page-checkout-review .commerce_payment.form-wrapper {
 .ced_top_level.ced_store > .ced-item__inner > .ced-item__title:before {
   content: '\e814'; }
 
+.ced_top_level.ced_import > .ced-item__inner > .ced-item__title:before {
+  content: '\e840'; }
+
+.ced_top_level.ced_user > .ced-item__inner > .ced-item__title:before {
+  content: '\e837'; }
+
 .ced_top_level.ced_other > .ced-item__inner > .ced-item__title:before {
   content: '\e819'; }
 
@@ -5441,5 +5447,3 @@ body.node-type-subscription .node__content input[type="submit"] {
   background-color: #66CD4C;
   border: 1px solid #66CD4C;
   max-width: 230px; }
-
-/*# sourceMappingURL=wttoc.styles.css.map */
