--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -64,3 +64,4 @@
 .icon-rss-squared:before { content: '\e83e'; } /* '' */
 .icon-arrows-cw:before { content: '\e83f'; } /* '' */
 .icon-download:before { content: '\e840'; } /* '' */
+.icon-brush:before { content: '\e841'; } /* '' */
