--- a/sites/all/libraries/fontello/css/fontello.css
+++ b/sites/all/libraries/fontello/css/fontello.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?49174450');
-  src: url('../font/fontello.eot?49174450#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff?49174450') format('woff'),
-       url('../font/fontello.ttf?49174450') format('truetype'),
-       url('../font/fontello.svg?49174450#fontello') format('svg');
+  src: url('../font/fontello.eot?64354422');
+  src: url('../font/fontello.eot?64354422#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff?64354422') format('woff'),
+       url('../font/fontello.ttf?64354422') format('truetype'),
+       url('../font/fontello.svg?64354422#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?49174450#fontello') format('svg');
+    src: url('../font/fontello.svg?64354422#fontello') format('svg');
   }
 }
 */
@@ -119,3 +119,4 @@
 .icon-rss-squared:before { content: '\e83e'; } /* '' */
 .icon-arrows-cw:before { content: '\e83f'; } /* '' */
 .icon-download:before { content: '\e840'; } /* '' */
+.icon-brush:before { content: '\e841'; } /* '' */
