small theme updates

--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -1770,6 +1770,8 @@ body.front {
           background: #FFC632;
           /* The Fallback */
           background: rgba(255, 198, 50, 0.75); }
+        body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form .views-exposed-widget#edit-title-wrapper {
+          display: none; }
         body.front .l-region--widetop .views-exposed-form-businesses-and-events-page-results .views-exposed-form .views-exposed-widget.views-submit-button {
           min-width: 40%;
           vertical-align: bottom; }
@@ -1778,7 +1780,7 @@ body.front {
             display: none; }
   body.front .l-region--widetop .v_page_search_results-container {
     background: url("/sites/all/themes/wttoc/images/prevImg/header.jpg");
-    background-size: auto 100%;
+    background-size: auto 100% !important;
     background-repeat: no-repeat;
     min-height: 200px;
     background-position: center center; }
@@ -5309,6 +5311,9 @@ body.page-checkout-review .commerce_payment.form-wrapper {
 .ced_top_level.ced_user > .ced-item__inner > .ced-item__title:before {
   content: '\e837'; }
 
+.ced_top_level.ced_theme > .ced-item__inner > .ced-item__title:before {
+  content: '\e841'; }
+
 .ced_top_level.ced_other > .ced-item__inner > .ced-item__title:before {
   content: '\e819'; }
 
@@ -5447,3 +5452,5 @@ body.node-type-subscription .node__content input[type="submit"] {
   background-color: #66CD4C;
   border: 1px solid #66CD4C;
   max-width: 230px; }
+
+/*# sourceMappingURL=wttoc.styles.css.map */
