fontello library update

--- a/sites/all/libraries/fontello/css/fontello-codes.css
+++ b/sites/all/libraries/fontello/css/fontello-codes.css
@@ -65,3 +65,4 @@
 .icon-arrows-cw:before { content: '\e83f'; } /* '' */
 .icon-download:before { content: '\e840'; } /* '' */
 .icon-brush:before { content: '\e841'; } /* '' */
+.icon-cog:before { content: '\e842'; } /* '' */
