--- a/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
@@ -162,6 +162,16 @@ footer.l-footer{
 					&.tmenu-Dashboard:before{
 						content:'\e826';
 					}
+					&.tmenu-UserDashboard{
+						color: $color1;
+						color: transparent;
+						letter-spacing: -0.5em;
+						padding-left:10px;
+						padding-right:13px;
+					}
+					&.tmenu-UserDashboard:before{
+						content:'\e842';
+					}
 					&.tmenu-Search{
 						color: $color1;
 						color: transparent;
