--- a/sites/all/themes/wttoc/sass/wttoc.styles.scss
+++ b/sites/all/themes/wttoc/sass/wttoc.styles.scss
@@ -25,6 +25,7 @@
 @import "components/commerce/Cart";
 @import "components/editor/Editor_Dashboard";
 @import "components/forms/Forms_contact-site-form";
+@import "components/forms/User_Forms";
 @import "components/store/Store_subscription";
 
 // Import variables, abstractions, base styles and components.
