--- a/sites/all/themes/wttoc/css/wttoc.styles.css
+++ b/sites/all/themes/wttoc/css/wttoc.styles.css
@@ -602,6 +602,30 @@ a {
       color: #fff; }
     .js .l-off-canvas.is-visible .l-region--navigation a:hover {
       color: #fff; }
+    .js .l-off-canvas.is-visible .l-region--navigation .block--menu-menu-top-menu--2 ul.menu {
+      text-align: center; }
+      .js .l-off-canvas.is-visible .l-region--navigation .block--menu-menu-top-menu--2 ul.menu li {
+        background-color: #333;
+        list-style: none;
+        display: inline-block;
+        border: 1px solid #fff;
+        margin: 5px; }
+        .js .l-off-canvas.is-visible .l-region--navigation .block--menu-menu-top-menu--2 ul.menu li a {
+          padding: 5px 15px;
+          display: block; }
+    .js .l-off-canvas.is-visible .l-region--navigation .block--system-main-menu {
+      margin-top: 15px;
+      padding-bottom: 2.5px; }
+      .js .l-off-canvas.is-visible .l-region--navigation .block--system-main-menu .block__title {
+        display: none; }
+      .js .l-off-canvas.is-visible .l-region--navigation .block--system-main-menu ul.menu li {
+        list-style: none;
+        padding: 10px 5px;
+        margin: 5px;
+        text-align: center;
+        font-size: 24px;
+        font-size: 2.4rem;
+        border-top: 3px solid #888; }
   .no-js .l-off-canvas {
     color: #000;
     min-height: 66px; }
@@ -5482,5 +5506,3 @@ body.node-type-subscription .node__content input[type="submit"] {
   background-color: #66CD4C;
   border: 1px solid #66CD4C;
   max-width: 230px; }
-
-/*# sourceMappingURL=wttoc.styles.css.map */
