--- a/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
+++ b/sites/all/themes/wttoc/sass/components/base_components/General_Elements.scss
@@ -140,7 +140,7 @@ footer.l-footer{
 				list-style: none;
 				display: inline-block;
 				> a{
-					display: block;
+					display: inline-block;
 					text-decoration:none;
 					padding: 12px 30px;
 					border-left: 1px solid white;
