admin theme, css to remove contact form on user edit

--- a/sites/all/modules/custom/admin_theme_overrides/css/overrides.css
+++ b/sites/all/modules/custom/admin_theme_overrides/css/overrides.css
@@ -10,3 +10,7 @@
 .commerce-discount-form #commerce-discount-fields-wrapper > .form-wrapper{
     clear:both;
 }
+
+body.page-user-edit #edit-contact{
+    display:none;
+}
